--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 coreapi==2.3.3
 coreschema==0.0.4
+dj-database-url==2.3.0
 Django==5.1.4
 django-filter==24.3
 django-rest-swagger==2.2.0
@@ -27,6 +28,7 @@ packaging==24.2
 prompt_toolkit==3.0.48
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 redis==5.2.1
@@ -34,6 +36,7 @@ requests==2.32.3
 simplejson==3.19.3
 six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.12.2
 tzdata==2024.2
 uritemplate==4.1.1
 urllib3==2.2.3
