--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ MarkupSafe==3.0.2
 openapi-codec==1.3.2
 packaging==24.2
 prompt_toolkit==3.0.48
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -42,5 +43,3 @@ uritemplate==4.1.1
 urllib3==2.2.3
 vine==5.1.0
 wcwidth==0.2.13
-
-
