--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 dj-database-url==2.3.0
 Django==5.1.4
+django-cors-headers==4.6.0
 django-filter==24.3
 django-rest-swagger==2.2.0
 djangorestframework==3.15.2
